deps/v8/test/message/syntactic-tail-call-of-new.out
*%(basename)s:12: SyntaxError: Unexpected expression inside tail call
  return continue new f()  ;
                  ^^^^^^^
SyntaxError: Unexpected expression inside tail call
